<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddMeetingActivity"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_meeting_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#5103DAC5"
            android:gravity="center"
            android:text="@string/name_of_meeting"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_meeting_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_meeting"
            android:gravity="center"
            android:inputType="text"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="#6103DAC5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_meeting_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_of_meeting"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_meeting_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginTop="1.5dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_meeting_subject"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#8003DAC5"
            android:gravity="center"
            android:text="@string/subject_of_meeting"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_subject_meeting"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/subject_of_meeting"
            android:inputType="text"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/text_view_date_meeting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#03DAC5"
            android:gravity="center"
            android:text="@string/date_of_meeting"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.yohanbernole.lamzone.ui.custom_widget.CustomDatePicker
                android:id="@+id/date_picker_add_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TimePicker
                android:id="@+id/time_picker_add_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_duration_meeting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#03DAC5"
            android:gravity="center"
            android:text="@string/duration_of_meeting"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edit_text_meeting_duration"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/duration_in_minute"
            android:gravity="center"
            android:inputType="number"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/text_view_meeting_participants"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#8003DAC5"
            android:gravity="center"
            android:text="@string/participants_in_meeting"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <MultiAutoCompleteTextView
            android:id="@+id/edit_text_email_user_meeting"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/exemple_mail"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/button_add_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_participant"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="#8003DAC5"
            android:layout_marginBottom="15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_user_participant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/fragment_user"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/button_add_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="#8003DAC5"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/add_meeting_to_list" />

    </LinearLayout>
</ScrollView>

