<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddUserActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#4103DAC5"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/text_view_user_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#5E03DAC5"
        android:gravity="center"
        android:text="@string/address_mail"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_user_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/button_submit_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#A303DAC5"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

</LinearLayout>